# erddap-datasetsxml-builder

./: .pre-commit-config.yaml  Dockerfile  README.md  action.yaml  entrypoint.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: update_latest_release.yml
erddap_datasetsxml_builder/: __init__.py  build_datasetsxml.py
