[tool.poetry]
name = "erddap_datasetsxml_builder"
version = "2.0.0"
description = "Build ERDAAP datasets.xml from human-legible docs."
authors = ["Tylar Murray <email@tylar.info>"]
readme = "README.md"
packages = [{include = "erddap_datasetsxml_builder"}]

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
