# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = erddap_datasetsxml_builder
description = Builds ERDDAP datasets.xml from more humnan-legible documentation.
author = Tylar Murray
author_email = email@tylar.info
url = https://github.com/7yl4r/erddap-datasetsxml-builder
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license-file = LICENSE
project_urls =
     Bug Tracker = https://github.com/7yl4r/erddap-datasetsxml-builder/issues
     Source Code = https://github.com/7yl4r/erddap-datasetsxml-builder
     Documentation = https://7yl4r.github.io/erddap-datasetsxml-builder  # NYI
classifiers =
    Development Status :: 3 - Alpha
#     Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
#     Topic :: Scientific/Engineering :: Bio-Informatics

[options]
# install_requires =
#     requests>2.7
#     pandas
python_requires = >=3.7
packages = find:
